--- a/ObjectRecognition/ObjectRecognition.Foundation.UI/ObjectRecognition.Foundation.UI.csproj
+++ b/ObjectRecognition/ObjectRecognition.Foundation.UI/ObjectRecognition.Foundation.UI.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ECFD3152-53D6-4A77-83CD-FF7009D4E986}</ProjectGuid>
+    <ProjectGuid>{B9DD657D-A74D-4A7B-851F-DFC5C1D15044}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ObjectRecognition.Feature.DetailsWindow</RootNamespace>
-    <AssemblyName>ObjectRecognition.Feature.DetailsWindow</AssemblyName>
+    <RootNamespace>ObjectRecognition.Foundation.UI</RootNamespace>
+    <AssemblyName>ObjectRecognition.Foundation.UI</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,18 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LiveCharts, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiveCharts.0.9.6\lib\net45\LiveCharts.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="LiveCharts.Wpf, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiveCharts.Wpf.0.9.6\lib\net45\LiveCharts.Wpf.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -71,8 +61,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DetailsWindow.xaml.cs">
-      <DependentUpon>DetailsWindow.xaml</DependentUpon>
+    <Compile Include="LoadingSign.xaml.cs">
+      <DependentUpon>LoadingSign.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -91,7 +81,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -102,20 +91,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="DetailsWindow.xaml">
+    <Page Include="LoadingSign.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ObjectRecognition.Foundation.UI\ObjectRecognition.Foundation.UI.csproj">
-      <Project>{B9DD657D-A74D-4A7B-851F-DFC5C1D15044}</Project>
-      <Name>ObjectRecognition.Foundation.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ObjectRecognition.Foundation.Utilities\ObjectRecognition.Foundation.Utilities.csproj">
-      <Project>{7A87C98D-3A62-4670-A3C5-65704A8D8116}</Project>
-      <Name>ObjectRecognition.Foundation.Utilities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
