Added ObjectRecognition Window, Added image uploading

--- a/ObjectRecognition/ObjectRecognition.Foundation.UI/ObjectRecognition.Foundation.UI.csproj
+++ b/ObjectRecognition/ObjectRecognition.Foundation.UI/ObjectRecognition.Foundation.UI.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -61,6 +62,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Button.xaml.cs">
+      <DependentUpon>Button.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ImageDisplay.xaml.cs">
+      <DependentUpon>ImageDisplay.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LoadingSign.xaml.cs">
       <DependentUpon>LoadingSign.xaml</DependentUpon>
     </Compile>
@@ -91,10 +98,24 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Button.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ImageDisplay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LoadingSign.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ObjectRecognition.Foundation.Utilities\ObjectRecognition.Foundation.Utilities.csproj">
+      <Project>{7A87C98D-3A62-4670-A3C5-65704A8D8116}</Project>
+      <Name>ObjectRecognition.Foundation.Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
