--- a/ObjectRecognition/ObjectRecognition.Feature.MainPageControls/ObjectRecognition.Feature.MainPageControls.csproj
+++ b/ObjectRecognition/ObjectRecognition.Feature.MainPageControls/ObjectRecognition.Feature.MainPageControls.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SideBarControls\SpecialButton.cs" />
     <Compile Include="SideMenuControls\CategoryButton.xaml.cs">
       <DependentUpon>CategoryButton.xaml</DependentUpon>
     </Compile>
@@ -90,7 +91,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
