--- a/ObjectRecognition/ObjectRecognition.Foundation.UI/ObjectRecognition.Foundation.UI.csproj
+++ b/ObjectRecognition/ObjectRecognition.Foundation.UI/ObjectRecognition.Foundation.UI.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -120,6 +121,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ObjectRecognition.Feature.MainPageControls\ObjectRecognition.Feature.MainPageControls.csproj">
+      <Project>{1FB4CC20-5CC7-433C-ABAC-C16CCF3C92B8}</Project>
+      <Name>ObjectRecognition.Feature.MainPageControls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ObjectRecognition.Foundation.Utilities\ObjectRecognition.Foundation.Utilities.csproj">
       <Project>{7A87C98D-3A62-4670-A3C5-65704A8D8116}</Project>
       <Name>ObjectRecognition.Foundation.Utilities</Name>
