Fixed Lbp histogram

--- a/ObjectRecognition/ObjectRecognition.Feature.OrWindow/ObjectRecognition.Feature.OrWindow.csproj
+++ b/ObjectRecognition/ObjectRecognition.Feature.OrWindow/ObjectRecognition.Feature.OrWindow.csproj
@@ -132,6 +132,10 @@
       <Project>{7A87C98D-3A62-4670-A3C5-65704A8D8116}</Project>
       <Name>ObjectRecognition.Foundation.Utilities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ObjectRecognition.Foundation.Windows\ObjectRecognition.Foundation.Windows.csproj">
+      <Project>{5611E631-F333-4CD7-B01E-8E4B76C04073}</Project>
+      <Name>ObjectRecognition.Foundation.Windows</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
